--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#13A460</color>
+    <color name="green_logo">#137544</color>
+    <color name="orange_text">#FAA819</color>
+    <color name="background">#F4F4EE</color>
+    <color name="gray_bookmark">#999999</color>
+    <color name="gray_live">#DADADA</color>
+    <color name="green_icon">#51D195</color>
+    <color name="green_text">#5AA180</color>
 </resources>
