--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="background_confirm">#D9D9D9</color>
     <color name="gray_bookmark">#999999</color>
     <color name="gray_live">#DADADA</color>
+    <color name="card_live">#F4F4EE</color>
+    <color name="green_title">#39966A</color>
     <color name="gray_text">#9B9B9B</color>
     <color name="green_icon">#51D195</color>
     <color name="green_text">#5AA180</color>
