--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="green_icon">#51D195</color>
     <color name="green_text">#5AA180</color>
     <color name="green_button">#13A460</color>
+    <color name="green_edu">#21A965</color>
 
 </resources>
