Perubahan jadwal live mentor dan status bar

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,5 @@
     <color name="green_text">#5AA180</color>
     <color name="green_button">#13A460</color>
     <color name="green_edu">#21A965</color>
-
+    <color name="green_jadwal">#248558</color>
 </resources>
