--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,5 +4,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">10.0.2.2</domain> <!-- untuk emulator Android -->
+        <domain includeSubdomains="true">192.168.1.6</domain>  <!-- Ganti dengan IP atau domain yang sesuai -->
     </domain-config>
 </network-security-config>
